# Drive-Sync

./: Readme.md
drive sync/client/src/: config.rs  connection.rs  ui.rs  util.rs
drive sync/server/: Cargo.toml  logs.toml
drive sync/server/src/: main.rs  route_handlers.rs
driveSync/client/: .gitignore  Cargo.toml  config.toml
driveSync/client/src/: config.rs  connection.rs  main.rs  setup.rs  ui.rs  util.rs
driveSync/server/: .gitignore
driveSync/server/src/: util.rs
website/: .gitignore  package.json
website/backend/: .env  Cargo.toml
website/backend/migrations/: 20260618074102_create_users.sql  20260618074105_add_shared_files.sql
website/backend/src/: auth.rs  db.rs  delete.rs  get.rs  main.rs  util.rs
website/backend/src/routes/: delete.rs  get.rs  mod.rs  post.rs
website/frontend/: index.html  package-lock.json  package.json  vite.config.ts
website/frontend/src/: App.tsx  InnerApp.tsx  index.css  main.tsx
website/frontend/src/Components/: Alert.tsx  Createfolder.tsx  SideBar.tsx  Upload.tsx  passwordStrength.tsx
website/frontend/src/api/: Auth.tsx  File.tsx
website/frontend/src/contexts/: AuthContext.tsx  RefreshContext.tsx
website/frontend/src/pages/: Auth.tsx  FileViewer.tsx  Files.tsx  SharedViewer.tsx
