[package]
name = "client"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
notify = "8.2.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = {version = "1.0.228", features=["derive"]}
tokio = {version = "1.48.0", features=["full"]}
toml = "0.9.8"
iced = { version = "0.13", features = ["image"] }
rfd = "0.15.4"
tungstenite = "0.28.0"
whoami = "1.6.1"
serde_json = "1.0.145"
tokio-util = "0.7.17"
once_cell = "1.21.3"

[build-dependencies]
winres = "0.1.12"

[[bin]]
name = "drive_sync"
path = "src/main.rs"
